kubernetes/apps/longhorn-system/longhorn/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: longhorn-frontend
