kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "longhorn.${PRIVATE_DOMAIN}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
